--- a/public/404.html
+++ b/public/404.html
@@ -4,10 +4,18 @@
   <title>Amica - 404Error</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="error.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Cabin+Condensed:700' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+
 </head>
-<svg viewBox="0 0 800 600">
+<body class="text-center">
+<img src="error2.png" style="width: 100px;height:100px;">
+  <svg viewBox="0 0 800 600">
   <symbol id="s-text">
+
     <text text-anchor="middle"
           x="50%"
           y="35%"
@@ -21,7 +29,7 @@
           y="68%"
           class="text--line2"
     >
-      Error
+      error
     </text>
 
   </symbol>
@@ -38,5 +46,7 @@
     <use xlink:href="#s-text"
          class="text-copy"></use>
   </g>
+
+</body>
 </svg>
 </html>
