--- a/public/500.html
+++ b/public/500.html
@@ -3,40 +3,73 @@
 <head>
   <title>Amica - 500Error</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="error.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+    .rails-default-error-page {
+      background-color: #EFEFEF;
+      color: #2E2F30;
+      text-align: center;
+      font-family: arial, sans-serif;
+      margin: 0;
+    }
+
+    .rails-default-error-page div.dialog {
+      width: 95%;
+      max-width: 33em;
+      margin: 4em auto 0;
+    }
+
+    .rails-default-error-page div.dialog > div {
+      border: 1px solid #CCC;
+      border-right-color: #999;
+      border-left-color: #999;
+      border-bottom-color: #BBB;
+      border-top: #B00100 solid 4px;
+      border-top-left-radius: 9px;
+      border-top-right-radius: 9px;
+      background-color: white;
+      padding: 7px 12% 0;
+      box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+    }
+
+    .rails-default-error-page h1 {
+      font-size: 100%;
+      color: #730E15;
+      line-height: 1.5em;
+    }
+
+    .rails-default-error-page div.dialog > p {
+      margin: 0 0 1em;
+      padding: 1em;
+      background-color: #F7F7F7;
+      border: 1px solid #CCC;
+      border-right-color: #999;
+      border-left-color: #999;
+      border-bottom-color: #999;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+      border-top-color: #DADADA;
+      color: #666;
+      box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+    }
+  </style>
 </head>
-<svg viewBox="0 0 800 600">
-  <symbol id="s-text">
-    <text text-anchor="middle"
-          x="50%"
-          y="35%"
-          class="text--line"
-    >
-      500InternServer
-    </text>
 
-    <text text-anchor="middle"
-          x="50%"
-          y="68%"
-          class="text--line2"
-    >
-      ServerError
-    </text>
+<body class="rails-default-error-page">
 
-  </symbol>
+<!-- This file lives in public/404.html -->
+<div class="dialog">
+  <div>
+    <img src="error2.png" alt="エラーの画像" width="150px" height="150px">
+    <h1>サーバーの内部でエラーが発生してしまいました</h1>
+    <p>お手数ですがお問い合わせの方から問い合わせください</p>
 
-  <g class="g-ants">
-    <use xlink:href="#s-text"
-         class="text-copy"></use>
-    <use xlink:href="#s-text"
-         class="text-copy"></use>
-    <use xlink:href="#s-text"
-         class="text-copy"></use>
-    <use xlink:href="#s-text"
-         class="text-copy"></use>
-    <use xlink:href="#s-text"
-         class="text-copy"></use>
-  </g>
-</svg>
+  </div>
+  <p>500 Internal Server Error</p>
+</div>
+</body>
 </html>
