errorページレイアウト

--- a/public/404.html
+++ b/public/404.html
@@ -4,14 +4,8 @@
   <title>Amica - 404Error</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="error.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Cabin+Condensed:700' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-
 </head>
-<body class="text-center">
 <svg viewBox="0 0 800 600">
   <symbol id="s-text">
     <text text-anchor="middle"
@@ -27,7 +21,7 @@
           y="68%"
           class="text--line2"
     >
-      error
+      Error
     </text>
 
   </symbol>
@@ -45,5 +39,4 @@
          class="text-copy"></use>
   </g>
 </svg>
-</body>
 </html>
