--- a/public/422.html
+++ b/public/422.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang = "ja">
 <head>
-  <title>Amica - 404Error</title>
+  <title>Amica - 422Error</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="error.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-
 </head>
-<h1><img src="error2.png" alt="エラーの画像" width="150px" height="150px">422error</h1>
+<svg viewBox="0 0 800 600">
+  <symbol id="s-text">
+    <text text-anchor="middle"
+          x="50%"
+          y="35%"
+          class="text--line"
+    >
+      422Entity
+    </text>
+
+    <text text-anchor="middle"
+          x="50%"
+          y="68%"
+          class="text--line2"
+    >
+      Error
+    </text>
+
+  </symbol>
+
+  <g class="g-ants">
+    <use xlink:href="#s-text"
+         class="text-copy"></use>
+    <use xlink:href="#s-text"
+         class="text-copy"></use>
+    <use xlink:href="#s-text"
+         class="text-copy"></use>
+    <use xlink:href="#s-text"
+         class="text-copy"></use>
+    <use xlink:href="#s-text"
+         class="text-copy"></use>
+  </g>
+</svg>
+</html>
