--- a/public/422.html
+++ b/public/422.html
@@ -3,7 +3,7 @@
 <head>
   <title>Amica - 422Error</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="error.css">
+  <link rel="stylesheet" href="public/error.css">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <svg viewBox="0 0 800 600">
