--- a/public/404.html
+++ b/public/404.html
@@ -1,42 +1,103 @@
 <!DOCTYPE html>
-<html lang = "ja">
+<html lang="ja">
 <head>
-  <title>Amica - 404Error</title>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="public/error.css">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Amica - 404Error</title>
+    <meta charset="UTF-8">
+    <style>
+        HTML, BODY {
+            height: 100%;
+            overflow: hidden;
+        }
+        BODY {
+            background: #082330;
+            background-size: 0.12em 100%;
+
+            font: 16em/1 Arial;
+        }
+
+        .text--line {
+
+            font-size: 0.3em;
+        }
+        .text--line2{
+
+            font-size: 0.5em;
+        }
+        svg {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+        .text-copy {
+            fill: none;
+            stroke: white;
+            stroke-dasharray: 7% 28%;
+            stroke-width: 3px;
+            animation: stroke-offset 9s infinite linear;
+        }
+        .text-copy:nth-child(1) {
+            stroke: #360745;
+            stroke-dashoffset: 7%;
+        }
+        .text-copy:nth-child(2) {
+            stroke: #d61c59;
+            stroke-dashoffset: 14%;
+        }
+        .text-copy:nth-child(3) {
+            stroke: #e7d84b;
+            stroke-dashoffset: 21%;
+        }
+        .text-copy:nth-child(4) {
+            stroke: #efeac5;
+            stroke-dashoffset: 28%;
+        }
+        .text-copy:nth-child(5) {
+            stroke: #1b8798;
+            stroke-dashoffset: 35%;
+        }
+        @keyframes stroke-offset {
+            50% {
+                stroke-dashoffset: 35%;
+                stroke-dasharray: 0 87.5%;
+            }
+        }
+
+    </style>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+<body>
 <svg viewBox="0 0 800 600">
-  <symbol id="s-text">
-    <text text-anchor="middle"
-          x="50%"
-          y="35%"
-          class="text--line"
-    >
-      404NotFound
-    </text>
+    <symbol id="s-text">
+        <text text-anchor="middle"
+              x="50%"
+              y="35%"
+              class="text--line"
+        >
+            404NotFound
+        </text>
 
-    <text text-anchor="middle"
-          x="50%"
-          y="68%"
-          class="text--line2"
-    >
-      Error
-    </text>
+        <text text-anchor="middle"
+              x="50%"
+              y="68%"
+              class="text--line2"
+        >
+            Error
+        </text>
 
-  </symbol>
+    </symbol>
 
-  <g class="g-ants">
-    <use xlink:href="#s-text"
-         class="text-copy"></use>
-    <use xlink:href="#s-text"
-         class="text-copy"></use>
-    <use xlink:href="#s-text"
-         class="text-copy"></use>
-    <use xlink:href="#s-text"
-         class="text-copy"></use>
-    <use xlink:href="#s-text"
-         class="text-copy"></use>
-  </g>
+    <g class="g-ants">
+        <use xlink:href="#s-text"
+             class="text-copy"></use>
+        <use xlink:href="#s-text"
+             class="text-copy"></use>
+        <use xlink:href="#s-text"
+             class="text-copy"></use>
+        <use xlink:href="#s-text"
+             class="text-copy"></use>
+        <use xlink:href="#s-text"
+             class="text-copy"></use>
+    </g>
 </svg>
+</body>
 </html>
